# ROS

myrobot/: convert_enginefile.py  package.xml
myrobot/scripts/: __init__.py  cifar_net.pth  draw_circle.py  model.py  my_first_node.py  pose_subscriber.py  revise.py  send.py  test_model.py  train.py
